made most of the layout

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -2,3 +2,31 @@
 .greenBG {
     background-color: #4aaaa5;
 }
+
+body{
+    background-image: url("../images/bg2.png");
+}
+.footerHeight
+{
+    height: 60px;
+    border-top: solid #4aaaa5 5px;
+    background-color: #666666;
+    color: #FFF;
+}
+
+.content{
+    background-color: #FFF;
+    width: 100%;
+    margin-top: 20px;
+    padding: 10px 20px 20px 20px;
+    border-radius: 10px;
+}
+
+.navbar-brand, h1{
+    font-family: 'Luckiest Guy', cursive;
+}
+
+.card
+{
+    margin: 10px;
+}
